--- a/ellipse_plot.ui
+++ b/ellipse_plot.ui
@@ -348,6 +348,7 @@
     </property>
     <addaction name="action_Close"/>
     <addaction name="action_About"/>
+    <addaction name="action_Documentation"/>
    </widget>
    <addaction name="menu_File"/>
   </widget>
@@ -364,6 +365,11 @@
   <action name="action_About">
    <property name="text">
     <string>About</string>
+   </property>
+  </action>
+  <action name="action_Documentation">
+   <property name="text">
+    <string>Documentation</string>
    </property>
   </action>
  </widget>
